cabal-version: 3.8
name:          imgivi
version:       0.1.0.0
synopsis:      Terminal-based image viewer with TUI
description:
  A dual-pane terminal image viewer with file browser navigation,
  image preview rendered via TrueColor ANSI half-block characters,
  and keyboard-driven file management operations.

license:       BSD-3-Clause
author:        
maintainer:    

build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wmissing-signatures

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    OverloadedRecordDot
    DisambiguateRecordFields
    DuplicateRecordFields

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
    ImgVi.App
    ImgVi.Events
    ImgVi.FileBrowser
    ImgVi.HelpBar
    ImgVi.ImageCache
    ImgVi.ImageViewer
    ImgVi.TerminalImage
    ImgVi.Types

  build-depends:
    base                >= 4.18 && < 5,
    relude              >= 1.2   && < 2,
    brick               >= 2.0   && < 3,
    vty                 >= 6.0   && < 7,
    vty-crossplatform   >= 0.4   && < 1,
    JuicyPixels         >= 3.3   && < 4,
    JuicyPixels-extra   >= 0.6   && < 1,
    directory           >= 1.3   && < 2,
    filepath            >= 1.4   && < 2,
    text                >= 2.0   && < 3,
    vector              >= 0.13  && < 1,
    containers          >= 0.6   && < 1

  default-language: GHC2021

executable imgivi
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    base   >= 4.18 && < 5,
    relude >= 1.2  && < 2,
    brick  >= 2.0  && < 3,
    vty    >= 6.0  && < 7,
    imgivi

  default-language: GHC2021
